fixed the truncate bug

--- a/src/app/notepad-page/notepad-page.component.scss
+++ b/src/app/notepad-page/notepad-page.component.scss
@@ -250,5 +250,5 @@ form {
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 47vw;
-    margin-top: 0.6rem;
+    margin-top: 0.8rem;
 }
